--- a/public/_locales/hr/messages.json
+++ b/public/_locales/hr/messages.json
@@ -128,6 +128,9 @@
     "closeIcon": {
         "message": "Ikona za zatvaranje"
     },
+    "OpenSubmissionMenu": {
+        "message": "Otvori preglednik prijava"
+    },
     "sortSegments": {
         "message": "Razvrstaj isječke"
     },
