New Crowdin updates (#1733)

--- a/public/_locales/hr/messages.json
+++ b/public/_locales/hr/messages.json
@@ -128,6 +128,9 @@
     "closeIcon": {
         "message": "IkreativKona za zatvaranje"
     },
+    "OpenSubmissionMenu": {
+        "message": "Otvori preglednikreativK prijava"
+    },
     "sortSegments": {
         "message": "Razvrstaj isječkreativKe"
     },
