--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -1237,6 +1237,7 @@
         "message": "Allow Scrolling To Edit Times"
     },
     "NoticeTimeAfterSkip": {
-        "message": "{seconds}s"
+        "message": "{seconds}s",
+        "description": "This is used on the popup to show how much time left. It will look like \"5s\". The word {seconds} will be replaced, so keep it here. Translations should only change the \"s\""
     }
 }
